###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "glew", version = "2.2.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "glm", version = "1.0.0.bcr.1")